print function of the terminal wip

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body onload="pageinit();">
     <header>
-        <h2>Terran BASIC web runner</h2>
+        <h2>Terran BASIC Web Runtime</h2>
     </header>
     <controlpanel>
         <div>
