read() not really working :(

--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
         </div>
     </controlpanel>
     <console>
-        <div id="console">
-            
-        </div>
+        <div id="console"></div>
+        <input type="checkbox" id="console_fake_enter_button" style="display:none">
     </console>
     <hr />
     <message>
